[package]
name = "swimbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28.0", features = ["macros", "rt-multi-thread"] }

[dependencies.serenity]
version = "0.11.5"
default-features = false
features = ["client", "gateway", "http", "model", "builder", "rustls_backend"]  # Specify the features you want to use

